--- a/src/payload/admin/scss/app.scss
+++ b/src/payload/admin/scss/app.scss
@@ -176,5 +176,19 @@ dialog {
 .payload__modal-item--enterDone {
   z-index: var(--z-modal);
 }
+.field-type.password {
+  .input-wrapper {
+    background-color: red;
+    position: relative;
+  }
+  .input-suffix {
+    position: absolute;
+    right: 24px;
+    top: 12px;
+    cursor: pointer;
+    width: 12px;
+    height: 12px;
+  }
+}
 
 @import '~payload-user-css';
